@@ -5,16 +5,12 @@ import br.upe.academia2.data.beans.IndicadorBiomedico;
 import br.upe.academia2.data.beans.Usuario;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Parent;
-import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.control.TextArea;
 import javafx.stage.Stage;
 
-import java.net.URL;
 import java.text.SimpleDateFormat;
-import java.util.*;
+import java.util.List;
 
 public class RelatoriosAlunoController {
 
@@ -24,10 +20,14 @@ public class RelatoriosAlunoController {
     private TextArea txtSaida;
 
     private static final String FORMATO_DATA = "yyyy-MM-dd HH:mm:ss";
-    private IndicadorBiomedicoBusiness indicadorBusiness = new IndicadorBiomedicoBusiness();
+    private final IndicadorBiomedicoBusiness indicadorBusiness = new IndicadorBiomedicoBusiness();
 
     @FXML
     private Button btnVoltar;
+
+    public void setUsuarioLogado(br.upe.academia2.data.beans.Usuario usuario) {
+        // Configurações adicionais, se necessário
+     }
 
     public void setUsuario(Usuario usuario) {
         this.usuario = usuario;
@@ -71,48 +71,37 @@ public class RelatoriosAlunoController {
             txtSaida.appendText("Nenhum indicador encontrado.\n");
             return;
         }
-
         if (lista.size() < 2) {
             txtSaida.appendText("Apenas um registro encontrado. Exibindo:\n");
             txtSaida.appendText(formatarIndicador(lista.get(0)));
             return;
         }
 
-        lista.sort(Comparator.comparing(IndicadorBiomedico::getDataRegistro).reversed());
-        IndicadorBiomedico atual = lista.get(0);
-        IndicadorBiomedico anterior = lista.get(1);
+        IndicadorBiomedico primeiro = lista.getFirst();
+        IndicadorBiomedico ultimo = lista.getLast();
 
-        txtSaida.appendText(" Comparando os dois registros mais recentes:\n\n");
-        txtSaida.appendText(" Registro mais recente:\n" + formatarIndicador(atual) + "\n");
-        txtSaida.appendText(" Registro anterior:\n" + formatarIndicador(anterior));
+        txtSaida.appendText(" Comparando o primeiro e o último registro cadastrados:\n\n");
+        txtSaida.appendText(" Primeiro registro:\n" + formatarIndicador(primeiro) + "\n");
+        txtSaida.appendText(" Último registro:\n" + formatarIndicador(ultimo));
     }
 
     @FXML
-    public void handleVoltar() throws Exception {
-        URL fxml = Objects.requireNonNull(
-                getClass().getResource("/fxml/AlunoMenu.fxml"),
-                "FXML /fxml/AlunoMenu.fxml não encontrado"
-        );
-        FXMLLoader loader = new FXMLLoader(fxml);
-        Parent root = loader.load();
-
+    public void handleVoltar() {
         Stage atual = (Stage) btnVoltar.getScene().getWindow();
-        Stage nova = new Stage();
-        nova.setScene(new Scene(root));
         atual.close();
-        nova.show();
     }
 
     public String formatarIndicador(IndicadorBiomedico ind) {
-        return String.format(
-                "------------------------------\n" +
-                        "Data: %s\n" +
-                        "Peso: %.2f kg\n" +
-                        "Altura: %.2f m\n" +
-                        "IMC: %.2f\n" +
-                        "Gordura: %.2f%%\n" +
-                        "Massa Magra: %.2f%%\n" +
-                        "------------------------------\n",
+        return """
+            ------------------------------
+            Data: %s
+            Peso: %.2f kg
+            Altura: %.2f m
+            IMC: %.2f
+            Gordura: %.2f%%
+            Massa Magra: %.2f%%
+            ------------------------------
+            """.formatted(
                 new SimpleDateFormat(FORMATO_DATA).format(ind.getDataRegistro()),
                 ind.getPeso(),
                 ind.getAltura(),
